dart/cpp/public/filament-dart.h

typedef struct BufferObjectBuilder *BufferObjectBuilderRef;
typedef struct BufferObject *BufferObjectRef;
typedef struct Camera *CameraRef;
typedef struct ColorGrading *ColorGradingRef;
typedef struct Engine *EngineRef;
typedef struct EntityManager *EntityManagerRef;
typedef struct Fence *FenceRef;
typedef struct IndexBuffer *IndexBufferRef;
typedef struct IndirectLight *IndirectLightRef;
typedef struct LightManager *LightManagerRef;
typedef struct Material *MaterialRef;
typedef struct MaterialInstance *MaterialInstanceRef;
typedef struct Parameter *ParameterRef;
typedef struct Renderer *RendererRef;
typedef struct Scene *SceneRef;
typedef struct SwapChain *SwapChainRef;
typedef struct Texture *TextureRef;
typedef struct View *ViewRef;
///
/// Math types
///

typedef struct {
  float x;
  float y;
  float z;
} Vector3, *Vector3Ref;
typedef struct {
  float x;
  float y;
  float z;
  float w;
} Vector4, *Vector4Ref;
typedef struct {
  union {
    float v[9];
    float m[3][3];
  };
} Matrix3x3, *Matrix3x3Ref;
typedef struct {
  union {
    float v[16];
    float m[4][4];
  };
} Matrix4x4, *Matrix4x4Ref;
int                 filament_material_get_refraction_mode(MaterialRef material);
int                 filament_material_get_refraction_type(MaterialRef material);
int                 filament_material_get_vertex_domain(MaterialRef material);
int                 filament_material_get_culling_mode(MaterialRef material);
int                 filament_material_get_is_color_write_enabled(MaterialRef material);
int                 filament_material_get_is_depth_write_enabled(MaterialRef material);
int                 filament_material_get_is_depth_culling_enabled(MaterialRef material);
int                 filament_material_get_is_double_sided(MaterialRef material);
float               filament_material_get_mask_threshold(MaterialRef material);
float               filament_material_get_specular_aa_variance(MaterialRef material);
float               filament_material_get_specular_aa_threshold(MaterialRef material);
int                 filament_material_get_required_attributes(MaterialRef material);
int                 filament_material_get_parameter_count(MaterialRef material);
int                 filament_material_get_parameters(MaterialRef material, ParameterRef parameters[], int parameterCount);
int                 filament_material_get_has_parameter(MaterialRef material, const char* name);