dart/filament/lib/src/generated/native_gen.dart


  late final _filament_material_get_refraction_modePtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(MaterialRef)>>(
          'filament_material_get_refraction_mode');
  late final _filament_material_get_refraction_mode =
      _filament_material_get_refraction_modePtr
          .asFunction<int Function(MaterialRef)>();

  int filament_material_get_refraction_type(
    MaterialRef material,
  ) {
    return _filament_material_get_refraction_type(
      material,
    );
  }

  late final _filament_material_get_refraction_typePtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(MaterialRef)>>(
          'filament_material_get_refraction_type');
  late final _filament_material_get_refraction_type =
      _filament_material_get_refraction_typePtr
          .asFunction<int Function(MaterialRef)>();

  int filament_material_get_vertex_domain(
    MaterialRef material,
  ) {
    return _filament_material_get_vertex_domain(
      material,
    );
  }

  late final _filament_material_get_vertex_domainPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(MaterialRef)>>(
          'filament_material_get_vertex_domain');
  late final _filament_material_get_vertex_domain =
      _filament_material_get_vertex_domainPtr
          .asFunction<int Function(MaterialRef)>();

  int filament_material_get_culling_mode(
    MaterialRef material,
  ) {
    return _filament_material_get_culling_mode(
      material,
    );
  }

  late final _filament_material_get_culling_modePtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(MaterialRef)>>(
          'filament_material_get_culling_mode');
  late final _filament_material_get_culling_mode =
      _filament_material_get_culling_modePtr
          .asFunction<int Function(MaterialRef)>();

  int filament_material_get_is_color_write_enabled(
    MaterialRef material,
  ) {
    return _filament_material_get_is_color_write_enabled(
      material,
    );
  }

  late final _filament_material_get_is_color_write_enabledPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(MaterialRef)>>(
          'filament_material_get_is_color_write_enabled');
  late final _filament_material_get_is_color_write_enabled =
      _filament_material_get_is_color_write_enabledPtr
          .asFunction<int Function(MaterialRef)>();

  int filament_material_get_is_depth_write_enabled(
    MaterialRef material,
  ) {
    return _filament_material_get_is_depth_write_enabled(
      material,
    );
  }

  late final _filament_material_get_is_depth_write_enabledPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(MaterialRef)>>(
          'filament_material_get_is_depth_write_enabled');
  late final _filament_material_get_is_depth_write_enabled =
      _filament_material_get_is_depth_write_enabledPtr
          .asFunction<int Function(MaterialRef)>();

  int filament_material_get_is_depth_culling_enabled(
    MaterialRef material,
  ) {
    return _filament_material_get_is_depth_culling_enabled(
      material,
    );
  }

  late final _filament_material_get_is_depth_culling_enabledPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(MaterialRef)>>(
          'filament_material_get_is_depth_culling_enabled');
  late final _filament_material_get_is_depth_culling_enabled =
      _filament_material_get_is_depth_culling_enabledPtr
          .asFunction<int Function(MaterialRef)>();

  int filament_material_get_is_double_sided(
    MaterialRef material,
  ) {
    return _filament_material_get_is_double_sided(
      material,
    );
  }

  late final _filament_material_get_is_double_sidedPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(MaterialRef)>>(
          'filament_material_get_is_double_sided');
  late final _filament_material_get_is_double_sided =
      _filament_material_get_is_double_sidedPtr
          .asFunction<int Function(MaterialRef)>();

  double filament_material_get_mask_threshold(
    MaterialRef material,
  ) {
    return _filament_material_get_mask_threshold(
      material,
    );
  }

  late final _filament_material_get_mask_thresholdPtr =
      _lookup<ffi.NativeFunction<ffi.Float Function(MaterialRef)>>(
          'filament_material_get_mask_threshold');
  late final _filament_material_get_mask_threshold =
      _filament_material_get_mask_thresholdPtr
          .asFunction<double Function(MaterialRef)>();

  double filament_material_get_specular_aa_variance(
    MaterialRef material,
  ) {
    return _filament_material_get_specular_aa_variance(
      material,
    );
  }

  late final _filament_material_get_specular_aa_variancePtr =
      _lookup<ffi.NativeFunction<ffi.Float Function(MaterialRef)>>(
          'filament_material_get_specular_aa_variance');
  late final _filament_material_get_specular_aa_variance =
      _filament_material_get_specular_aa_variancePtr
          .asFunction<double Function(MaterialRef)>();

  double filament_material_get_specular_aa_threshold(
    MaterialRef material,
  ) {
    return _filament_material_get_specular_aa_threshold(
      material,
    );
  }

  late final _filament_material_get_specular_aa_thresholdPtr =
      _lookup<ffi.NativeFunction<ffi.Float Function(MaterialRef)>>(
          'filament_material_get_specular_aa_threshold');
  late final _filament_material_get_specular_aa_threshold =
      _filament_material_get_specular_aa_thresholdPtr
          .asFunction<double Function(MaterialRef)>();

  int filament_material_get_required_attributes(
    MaterialRef material,
  ) {
    return _filament_material_get_required_attributes(
      material,
    );
  }

  late final _filament_material_get_required_attributesPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(MaterialRef)>>(
          'filament_material_get_required_attributes');
  late final _filament_material_get_required_attributes =
      _filament_material_get_required_attributesPtr
          .asFunction<int Function(MaterialRef)>();

  int filament_material_get_parameter_count(
    MaterialRef material,
  ) {
    return _filament_material_get_parameter_count(
      material,
    );
  }

  late final _filament_material_get_parameter_countPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(MaterialRef)>>(
          'filament_material_get_parameter_count');
  late final _filament_material_get_parameter_count =
      _filament_material_get_parameter_countPtr
          .asFunction<int Function(MaterialRef)>();

  int filament_material_get_parameters(
    MaterialRef material,
    ffi.Pointer<ParameterRef> parameters,
    int parameterCount,
  ) {
    return _filament_material_get_parameters(
      material,
      parameters,
      parameterCount,
    );
  }

  late final _filament_material_get_parametersPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(MaterialRef, ffi.Pointer<ParameterRef>,
              ffi.Int32)>>('filament_material_get_parameters');
  late final _filament_material_get_parameters =
      _filament_material_get_parametersPtr.asFunction<
          int Function(MaterialRef, ffi.Pointer<ParameterRef>, int)>();

  int filament_material_get_has_parameter(
    MaterialRef material,
    ffi.Pointer<ffi.Int8> name,
  ) {
    return _filament_material_get_has_parameter(
      material,
      name,
    );
  }

  late final _filament_material_get_has_parameterPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(MaterialRef,
              ffi.Pointer<ffi.Int8>)>>('filament_material_get_has_parameter');
  late final _filament_material_get_has_parameter =
      _filament_material_get_has_parameterPtr
          .asFunction<int Function(MaterialRef, ffi.Pointer<ffi.Int8>)>();
}

class BufferObjectBuilder extends ffi.Opaque {}

class BufferObject extends ffi.Opaque {}

class Camera extends ffi.Opaque {}

class ColorGrading extends ffi.Opaque {}

class Engine extends ffi.Opaque {}

class EntityManager extends ffi.Opaque {}

class Fence extends ffi.Opaque {}

class IndexBuffer extends ffi.Opaque {}

class IndirectLight extends ffi.Opaque {}

class LightManager extends ffi.Opaque {}

class Material extends ffi.Opaque {}

class MaterialInstance extends ffi.Opaque {}

class Parameter extends ffi.Opaque {}

class Renderer extends ffi.Opaque {}

class Scene extends ffi.Opaque {}

class SwapChain extends ffi.Opaque {}

class Texture extends ffi.Opaque {}

class View extends ffi.Opaque {}

/// Math types
class Vector3 extends ffi.Struct {
  @ffi.Float()
  external double x;

  @ffi.Float()
  external double y;

  @ffi.Float()
  external double z;
}

class Vector4 extends ffi.Struct {
  @ffi.Float()
  external double x;

  @ffi.Float()
  external double y;

  @ffi.Float()
  external double z;

  @ffi.Float()
  external double w;
}

class Matrix3x3 extends ffi.Opaque {}

class Matrix4x4 extends ffi.Opaque {}

typedef EngineRef = ffi.Pointer<Engine>;
typedef EntityManagerRef = ffi.Pointer<EntityManager>;
typedef SwapChainRef = ffi.Pointer<SwapChain>;
typedef ViewRef = ffi.Pointer<View>;
typedef RendererRef = ffi.Pointer<Renderer>;
typedef CameraRef = ffi.Pointer<Camera>;
typedef SceneRef = ffi.Pointer<Scene>;
typedef FenceRef = ffi.Pointer<Fence>;
typedef BufferObjectBuilderRef = ffi.Pointer<BufferObjectBuilder>;
typedef BufferObjectRef = ffi.Pointer<BufferObject>;
typedef ColorGradingRef = ffi.Pointer<ColorGrading>;
typedef IndexBufferRef = ffi.Pointer<IndexBuffer>;
typedef IndirectLightRef = ffi.Pointer<IndirectLight>;
typedef TextureRef = ffi.Pointer<Texture>;
typedef LightManagerRef = ffi.Pointer<LightManager>;
typedef MaterialRef = ffi.Pointer<Material>;
typedef MaterialInstanceRef = ffi.Pointer<MaterialInstance>;
typedef ParameterRef = ffi.Pointer<Parameter>;
